[package]
name = "eip55"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
description = "EIP-55 checksum and validator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/eip55-rs"
keywords = ["eip55", "etheruem", "contract", "eip", "blockchain", "cryptocurrency"]

[dependencies]
sha3 = "0.9.1"
rust-crypto = "0.2.36"
